--- a/source/com.microsoft.tfs.core/.classpath
+++ b/source/com.microsoft.tfs.core/.classpath
@@ -1,42 +1,46 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src" output="bin"/>
-	<classpathentry kind="src" path="rest_core" output="bin"/>
-	<classpathentry kind="src" path="tests" output="bin-test">
+	<classpathentry kind="src" output="bin" path="src"/>
+	<classpathentry kind="src" output="bin" path="rest_core"/>
+	<classpathentry kind="src" output="bin-test" path="tests">
 		<attributes>
 			<attribute name="test" value="true"/>
 		</attributes>
 	</classpathentry>
-
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4">
 		<attributes>
 			<attribute name="test" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
-	<classpathentry kind="lib" path="libs/AlmHttpClient-15.105.0.20161011/alm-distributedtask-client-15.105.0-SNAPSHOT.jar" exported="true"/>
-	<classpathentry kind="lib" path="libs/AlmHttpClient-15.105.0.20161011/alm-extensionmanagement-client-15.105.0-SNAPSHOT.jar" exported="true"/>
-	<classpathentry kind="lib" path="libs/AlmHttpClient-15.105.0.20161011/alm-gallery-client-15.105.0-SNAPSHOT.jar" exported="true"/>
-	<classpathentry kind="lib" path="libs/AlmHttpClient-15.105.0.20161011/alm-releasemanagement-client-15.105.0-SNAPSHOT.jar" exported="true"/>
-	<classpathentry kind="lib" path="libs/AlmHttpClient-15.105.0.20161011/alm-tfs-client-15.105.0-SNAPSHOT.jar" exported="true"/>
-	<classpathentry kind="lib" path="libs/AlmHttpClient-15.105.0.20161011/alm-vss-client-15.105.0-SNAPSHOT.jar" exported="true"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry exported="true" kind="lib" path="libs/AlmHttpClient-15.105.0.20161011/alm-distributedtask-client-15.105.0-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/AlmHttpClient-15.105.0.20161011/alm-extensionmanagement-client-15.105.0-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/AlmHttpClient-15.105.0.20161011/alm-gallery-client-15.105.0-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/AlmHttpClient-15.105.0.20161011/alm-releasemanagement-client-15.105.0-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/AlmHttpClient-15.105.0.20161011/alm-tfs-client-15.105.0-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/AlmHttpClient-15.105.0.20161011/alm-vss-client-15.105.0-SNAPSHOT.jar"/>
 	<classpathentry kind="lib" path="libs/annotation-detector-3.0.4/annotation-detector-3.0.4.jar"/>
-	<classpathentry kind="lib" path="libs/auth-common-0.6.4.jar" sourcepath="libs/auth-common-0.6.4-sources.jar" exported="true"/>
-	<classpathentry kind="lib" path="libs/auth-core-0.6.4.jar" sourcepath="libs/auth-core-0.6.4-sources.jar" exported="true"/>
-	<classpathentry kind="lib" path="libs/auth-providers-0.6.4.jar" sourcepath="libs/auth-providers-0.6.4-sources.jar" exported="true"/>
-	<classpathentry kind="lib" path="libs/auth-secure-storage-0.6.4.jar" sourcepath="libs/auth-secure-storage-0.6.4-sources.jar" exported="true"/>
+	<classpathentry exported="true" kind="lib" path="libs/auth-common-0.6.4.jar" sourcepath="libs/auth-common-0.6.4-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/auth-core-0.6.4.jar" sourcepath="libs/auth-core-0.6.4-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/auth-providers-0.6.4.jar" sourcepath="libs/auth-providers-0.6.4-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/auth-secure-storage-0.6.4.jar" sourcepath="libs/auth-secure-storage-0.6.4-sources.jar"/>
 	<classpathentry kind="lib" path="libs/commons-io-2.4/commons-io-2.4.jar"/>
 	<classpathentry kind="lib" path="libs/commons-lang3-3.1/commons-lang3-3.1.jar"/>
 	<classpathentry kind="lib" path="libs/guava-12.0.1/guava-12.0.1.jar"/>
 	<classpathentry kind="lib" path="libs/hsqldb-1.8.0.10-ebcdic/hsqldb.jar"/>
 	<classpathentry kind="lib" path="libs/httpclient-4.3.1/httpclient-4.3.1.jar"/>
 	<classpathentry kind="lib" path="libs/httpcore-4.3/httpcore-4.3.jar"/>
-	<classpathentry kind="lib" path="libs/jackson-core-2.7.9/jackson-annotations-2.7.9.jar" exported="true"/>
-	<classpathentry kind="lib" path="libs/jackson-core-2.7.9/jackson-core-2.7.9.jar" exported="true"/>
-	<classpathentry kind="lib" path="libs/jackson-core-2.7.9/jackson-databind-2.7.9.7.jar" exported="true"/>
-	<classpathentry kind="lib" path="libs/jna/jna-4.5.2.jar" sourcepath="libs/jna-4.5.2-sources.jar" exported="true"/>
-	<classpathentry kind="lib" path="libs/jna/jna-platform-4.5.2.jar" sourcepath="libs/jna-platform-4.5.2-sources.jar" exported="true"/>
+	<classpathentry exported="true" kind="lib" path="libs/jackson-core-2.7.9/jackson-annotations-2.7.9.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/jackson-core-2.7.9/jackson-core-2.7.9.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/jackson-core-2.7.9/jackson-databind-2.7.9.7.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/jna/jna-4.5.2.jar" sourcepath="libs/jna-4.5.2-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/jna/jna-platform-4.5.2.jar" sourcepath="libs/jna-platform-4.5.2-sources.jar"/>
 	<classpathentry kind="lib" path="libs/jsr305-1.3.9/jsr305-1.3.9.jar"/>
-	<classpathentry kind="lib" path="libs/oauth2-useragent-0.11.3.jar" sourcepath="libs/oauth2-useragent-0.11.3-sources.jar" exported="true"/>
+	<classpathentry exported="true" kind="lib" path="libs/oauth2-useragent-0.11.3.jar" sourcepath="libs/oauth2-useragent-0.11.3-sources.jar"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
+	<classpathentry kind="output" path="bin"/>
 </classpath>
