--- a/source/com.microsoft.tfs.sdk.samples.console/.classpath
+++ b/source/com.microsoft.tfs.sdk.samples.console/.classpath
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src" output="bin"/>
+	<classpathentry kind="src" output="bin" path="src"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/com.microsoft.tfs.core"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/com.microsoft.tfs.util"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/com.microsoft.tfs.jni"/>
@@ -8,5 +8,10 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/com.microsoft.tfs.core.ws"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/com.microsoft.tfs.core.ws.runtime"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/com.microsoft.tfs.core.httpclient"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="output" path="bin"/>
 </classpath>
