--- a/source/com.microsoft.tfs.core/build.properties
+++ b/source/com.microsoft.tfs.core/build.properties
@@ -26,7 +26,7 @@ bin.includes = META-INF/,\
                libs/jna/jna-platform-4.5.2.jar,\
                libs/jsr305-1.3.9/jsr305-1.3.9.jar,\
                libs/oauth2-useragent-0.11.3.jar,\
-               libs/slf4j-api-1.7.36.jar,
+               libs/slf4j-api-1.7.36.jar,\
                libs/slf4j-jcl-1.7.36.jar
 output.com.microsoft.tfs.core.jar = bin/
 source.com.microsoft.tfs.core.jar = src/,\
