--- a/source/com.microsoft.tfs.sdk.samples.console/.classpath
+++ b/source/com.microsoft.tfs.sdk.samples.console/.classpath
@@ -8,7 +8,7 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/com.microsoft.tfs.core.ws"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/com.microsoft.tfs.core.ws.runtime"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/com.microsoft.tfs.core.httpclient"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-17">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
